# Sidekick64

./: .gitignore  .gitmodules  264config.cpp  264config.h  264screen.cpp  264screen.h  LICENSE  Makefile  README.md  c64screen.cpp  c64screen.h  config.cpp  config.h  configure  crt.cpp  crt.h  dirscan.cpp  dirscan.h  disk_emulation.h  fmopl.h  gpio_defs.cpp  gpio_defs.h  helpers.cpp  helpers.h  helpers264.h  kernel_ar.cpp  kernel_ar.h  kernel_cart.cpp  kernel_cart.h  kernel_cart128.cpp  kernel_cart128.h  kernel_ef.cpp  kernel_ef.h  kernel_fc3.cpp  kernel_fc3.h  kernel_georam.cpp  kernel_georam.h  kernel_kcs.cpp  kernel_kcs.h  kernel_kernal.cpp  (+55 more)
3D Print Case/: SKCase_Bottom.stl  SKCase_Spacer.stl  SKCase_Top_Logo.stl  SKCase_Top_Plain.stl  license.txt
ARM STUB/: config.txt  no-prefetch.S  no-prefetch.lst
C16Side/: neoramc16.c  rpimenu16.c  rpimenu16.s  rpimenu16_sub.s
C64Side/: eapi-sk64.s  ld.crt.cfg  make_all.bat  rpimenu.c  rpimenu_sub.s
Cartridges/: cart_d020.h
Circle/: Rules.mk  readme.txt  sysconfig.h
D2EF/: binaries.cpp  binaries.h  cart.h  d64.cpp  disk2easyflash.cpp  readme.txt
Gerber/: ibom_sk20.html  ibom_sk20v.html  ibom_sk64.html  ibom_sk64zero.html  license.txt
OLED/: font6x8.h  num2str.cpp  num2str.h  ssd1306xled.cpp  ssd1306xled8x16.cpp
PSID/: config.h  readme.txt
Source/Firmware/PSID/sidtune/: IconInfo.cpp  MUS.cpp  Makefile.am  Makefile.in  PP20.d  PSID.d  SidTune.cpp  SidTune.d  SidTuneCfg.h  SidTuneTools.cpp  SidTuneTools.d
Vice/: m93c86.h  readme.txt
resid/: filter.cpp  filter.h  sid.cpp  sid.h
resid_vice_trunk/: siddefs.h  (+2 more)
(+267 files in other folders)
