noinst_LIBRARIES = libsidtune.a

# enable warnings and turn them into errors to enforce warning free code
AM_CFLAGS = -Wall -Werror

libsidtune_a_CFLAGS = $(AM_CFLAGS)

libsidtune_a_SOURCES = IconInfo.cpp \
InfoFile.cpp \
MUS.cpp \
p00.cpp \
PP20.cpp \
PP20.h \
PP20_Defs.h \
prg.cpp \
PSID.cpp \
SidTune.cpp \
SidTuneCfg.h \
SidTuneTools.cpp \
SidTuneTools.h
